--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <p>수집된 정보는 서비스 제공에 필요한 기간 동안 보관되며, 관련 법령 또는 서비스 운영상 필요에 따라 처리될 수 있습니다.</p>
 
   <h2>5. 문의</h2>
-  <p>문의: <code>이메일을 여기에 입력</code></p>
+  <p>문의: <code>doing9498@gmail.com</code></p>
 </body>
 </html>
